--- a/src/common/stylus/base.styl
+++ b/src/common/stylus/base.styl
@@ -15,6 +15,12 @@ body,html{
 		visiblility:hidden;
 	}
 }
+.name_ell {
+    overflow-x: hidden;
+    text-overflow: ellipsis;
+    word-break: keep-all;
+    white-space: nowrap;
+}
 @media (-webkit-min-device-pixel-ratio:1.5),
 (min-device-pixel-ratio:1.5){
 	.border-1px{
