--- a/src/common/stylus/icon.styl
+++ b/src/common/stylus/icon.styl
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'aissues-icon';
-  src:  url('../fonts/aissues-icon.eot?ldxxuj');
-  src:  url('../fonts/aissues-icon.eot?ldxxuj#iefix') format('embedded-opentype'),
-    url('../fonts/aissues-icon.ttf?ldxxuj') format('truetype'),
-    url('../fonts/aissues-icon.woff?ldxxuj') format('woff'),
-    url('../fonts/aissues-icon.svg?ldxxuj#aissues-icon') format('svg');
+  src:  url('../fonts/aissues-icon.eot?q91a2j');
+  src:  url('../fonts/aissues-icon.eot?q91a2j#iefix') format('embedded-opentype'),
+    url('../fonts/aissues-icon.ttf?q91a2j') format('truetype'),
+    url('../fonts/aissues-icon.woff?q91a2j') format('woff'),
+    url('../fonts/aissues-icon.svg?q91a2j#aissues-icon') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -24,6 +24,12 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-bullhorn:before {
+  content: "\e91a";
+}
+.icon-book:before {
+  content: "\e91f";
+}
 .icon-bell:before {
   content: "\e951";
 }
@@ -39,3 +45,4 @@
 .icon-menu:before {
   content: "\e9bd";
 }
+
